# llm-disagg-serving

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml  serve.sh
experiments/: latency_breakdown.ipynb  test_e2e.py
infra/: Dockerfile  Makefile  docker-compose.yml
kv_transfer/: serializer.py  transport.py
router/: main.py  models.py  scheduler.py
ui/: next.config.js  package.json
ui/app/: layout.tsx  page.tsx
workers/: config.py
workers/decode/: server.py  worker.py
workers/prefill/: server.py  worker.py
