[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-disagg-serving"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "pydantic>=2.7",
  "torch>=2.3",
  "transformers>=4.41",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx",          # for TestClient
  "jupyter>=1.0",
  "ipykernel>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["router", "workers", "kv_transfer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
